force-app/main/default/objects/CM_Dashboard__c/CM_Dashboard__c.object-meta.xml
<CustomObject>
    <label>CM Dashboard</label>
    <nameField>
        <label>Dashboard Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CM Dashboards</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>