force-app/main/default/objects/CM_Dashboard__c/fields/AudienceType__c.field-meta.xml
<CustomField>
    <fullName>AudienceType__c</fullName>
    <label>Audience Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>None</fullName><label>None</label><default>true</default></value>
            <value><fullName>Default</fullName><label>Default (모든 사용자)</label><default>false</default></value>
            <value><fullName>Profile</fullName><label>Profile</label><default>false</default></value>
            <value><fullName>CustomPermission</fullName><label>Custom Permission</label><default>false</default></value>
            <value><fullName>Group</fullName><label>Public Group</label><default>false</default></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>