force-app/main/default/objects/CM_Dashboard__c/fields/AudienceValue__c.field-meta.xml
<CustomField>
    <fullName>AudienceValue__c</fullName>
    <label>Audience Value</label>
    <length>255</length>
    <type>Text</type>
</CustomField>