force-app/main/default/objects/CM_Dashboard__c/fields/LayoutConfig__c.field-meta.xml
<CustomField>
    <fullName>LayoutConfig__c</fullName>
    <label>Layout Config</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>