force-app/main/default/objects/CM_Dashboard__c/fields/Priority__c.field-meta.xml
<CustomField>
    <fullName>Priority__c</fullName>
    <label>Priority</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
    <defaultValue>99</defaultValue>
</CustomField>